[gd_scene load_steps=2 format=3 uid="uid://pdskgluljddh"]

[ext_resource type="Script" path="res://Scripts/rocket.gd" id="1_kwgfw"]

[node name="Projectile" type="Area3D"]
collision_layer = 8
collision_mask = 15
script = ExtResource("1_kwgfw")
speed = 0.5

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="RayCast" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.0191018, 4.63849)
target_position = Vector3(0, -5, 0)
hit_from_inside = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
